@@ -801,6 +801,14 @@ int main(int argc, char **argv)
 		/* stop the heartbeat last */
 		heartbeat_stop();
 
+		/*
+		 * Run SlurmctldPrimaryOffProg only if we are the primary
+		 * (backup_inx == 0). The backup controllers (backup_inx > 0)
+		 * already run it when dropping to standby mode.
+		 */
+		if (slurmctld_primary)
+			_run_primary_prog(false);
+
 		if (slurmctld_config.resume_backup == false)
 			break;
 
