@@ -139,6 +139,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix missing suffixes in squeue.
  -- pam_slurm_adopt - send an error message to the user if no Slurm jobs
     can be located on the node.
+ -- Run SlurmctldPrimaryOffProg when the primary slurmctld process shuts down.
 
 * Changes in Slurm 18.08.3
 ==========================
